# project_forecast

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
data/pmdarima/: forecast_results.csv  forecast_simple.csv
data/statsmodels/: sarima_forecast_results.csv
src/: forecast-pmdarima.py  forecast-prophet.py  forecast-statsmodels.py
