[project]
name = "project_forecast"
version = "0.1.0"
description = "airline passengers forecast"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary",
    "pandas",
    "matplotlib",
    "python-dotenv",
    "prophet",
    "pmdarima>=2.0.4",
    "statsmodels>=0.14.5",
]

[tool.uv.extra-build-dependencies]
pmdarima = ["numpy"]
